Hoàn thành bài 8

--- a/THcautrucif_else_if/THifelseif.html
+++ b/THcautrucif_else_if/THifelseif.html
@@ -19,7 +19,7 @@
     } else if (yourname == null) {
         alert("Canceld");
     } else {
-        alert("I don't know you")
+        alert("I don't know you");
     }
 </script>
 </body>
