--- a/THcautrucSwitch-case/THbai3kiemtragiatriso.html
+++ b/THcautrucSwitch-case/THbai3kiemtragiatriso.html
@@ -6,13 +6,25 @@
 </head>
 <body>
     <script>
-        let a = +prompt("Nhập số vào: ");
-        if (a > 0){
-            alert(1);
-        } else if (a < 0){
-            alert(-1);
-        } else {
-            alert(0);
+        // let a = +prompt("Nhập số vào: ", 0);
+        // if (a > 0){
+        //     alert(1);
+        // } else if (a < 0){
+        //     alert(-1);
+        // } else {
+        //     alert(0);
+        // } Thay cấu trúc if bằng cấu trúc switch-case.
+        let a = +prompt("Nhập số vào");
+        switch ((a > 0) ? 1 : (a < 0) ? -1 : 0){
+            case 1:
+                alert(1);
+                break;
+            case -1:
+                alert(-1);
+                break;
+            default:
+                alert(0);
+                break;
         }
     </script>
 </body>
